--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.0",
     "desk-client": "^0.9.0",
     "dicom-parser": "^1.8.3",
     "filewalker": "^0.1.3",
+    "lodash": "^4.17.15",
     "node-status": "^1.0.0"
   }
 }
