--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "async": "^3.2.0",
-    "desk-client": "^0.9.0",
+    "commander": "^4.1.1",
+    "desk-client": "^0.10.0",
     "dicom-parser": "^1.8.3",
     "filewalker": "^0.1.3",
     "lodash": "^4.17.15",
